--- a/index.html
+++ b/index.html
@@ -19,6 +19,188 @@
 </head>
 
 <body>
+    <!-- header part -->
+    <header>
+
+    </header>
+    <!-- main part -->
+    <main>
+        <!-- banner part -->
+        <section class="container banner">
+            <div>
+                <h2 class="banner-title">Conmebol<br>Copa America<br>2021</h2>
+                <button class="button button-banner">
+                    <a class="button-link" href="">
+                        <span class="button-link-span
+                        ">Watch Live</span> <i class="fas fa-arrow-right"></i>
+                    </a>
+                </button>
+            </div>
+            <div class="banner-img">
+                <img src="images/banner.png" alt="">
+            </div>
+        </section>
+        <section class="container players-display">
+            <div class="players-box">
+                <div class="players">
+                    <article class="player">
+                        <div class="player-details">
+                            <img src="images/players/player-1.png" alt="">
+                            <h3>Neymar Jr</h3>
+                            <p>
+                                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer
+                                who plays as a forward for Paris Saint-Germain and the Brazil national team.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="player">
+                        <div class="player-details">
+                            <img src="images/players/messi1.jpg" alt="">
+                            <h3>Lionel Messi</h3>
+                            <p>
+                                Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an
+                                attacking midfielder and captains the Argentina national team and Laliga club FC
+                                Barcelona.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="player">
+                        <div class="player-details">
+                            <img src="images/players/player-3.png" alt="">
+                            <h3>Cristiano Ronaldo</h3>
+                            <p>
+                                Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer
+                                who plays as a forward for Juventus and captains the Portugal national team.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="player">
+                        <div class="player-details">
+                            <img src="images/players/player-4.png" alt="">
+                            <h3>Paulo Dybala</h3>
+                            <p>
+                                Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for
+                                Serie A club Juventus and the Argentina national team.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="player">
+                        <div class="player-details">
+                            <img src="images/players/player-5.png" alt="">
+                            <h3>Mesut Ozil</h3>
+                            <p>
+                                Mesut Özil is a German professional footballer who plays as an attacking midfielder for.
+                                Nicknamed "The Assist King". He has also played as a wide midfielder in his career.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="player">
+                        <div class="player-details">
+                            <img src="images/players/player-6.png" alt="">
+                            <h3>Mauro Icardi</h3>
+                            <p>
+                                Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for
+                                Ligue 1 club Paris Saint-Germain and the Argentina national team.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="player">
+                        <div class="player-details">
+                            <img src="images/players/player-7.png" alt="">
+                            <h3>Di Maria</h3>
+                            <p>
+                                Ángel Fabián Di María is an Argentine professional footballer who plays for Paris
+                                Saint-Germain and the Argentina national team. He can play winger or attacking
+                                midfielder.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="player">
+                        <div class="player-details">
+                            <img src="images/players/player-8.png" alt="">
+                            <h3>kylian Mbappé</h3>
+                            <p>
+                                Kylian Mbappé Lottin is a French professional footballer who plays as a forward for
+                                Ligue 1 club Paris Saint-Germain and the France national team.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="player">
+                        <div class="player-details">
+                            <img src="images/players/player-9.png" alt="">
+                            <h3>Mohamed Salah</h3>
+                            <p>
+                                Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a
+                                forward for Premier League club Liverpool and captains the Egypt national team.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="player">
+                        <div class="player-details">
+                            <img src="images/players/player-10.png" alt="">
+                            <h3>Harry Kane</h3>
+                            <p>
+                                Harry Edward Kane MBE is an English professional footballer who plays as a striker for
+                                Premier League club Tottenham Hotspur and captains the England national team.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="player">
+                        <div class="player-details">
+                            <img src="images/players/player-11.png" alt="">
+                            <h3>Kevin Bruyne</h3>
+                            <p>
+                                Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for
+                                Premier League club Manchester City, where he is vice-captain, and the Belgium team.
+                            </p>
+                        </div>
+                    </article>
+
+                    <article class="player">
+                        <div class="player-details">
+                            <img src="images/players/player-12.png" alt="">
+                            <h3>Philippe Coutinho</h3>
+                            <p>
+                                Philippe Coutinho Correia is a Brazilian professional footballer who plays as an
+                                attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.
+                            </p>
+                        </div>
+                    </article>
+
+                </div>
+            </div>
+
+            <section class="container match">
+                <article class="match-info">
+                    <h2 class="match-title">All Highlights<br>Copa America 2021</h2>
+                    <p>
+                        Football is like life. It requires perseverance, self-denial, hard work, sacrifice, dedication,
+                        and respect for authority.
+                    </p>
+                    <button class="button button-match">
+                        <a class="button-link" href="">
+                            <span class="button-link-span
+                            ">Watch Live</span> <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </button>
+                </article>
+                <div class="match-img">
+                    <img src="images/match.png" alt="">
+                </div>
+            </section>
+
+        </section>
+    </main>
 
 </body>
 
