--- a/index.html
+++ b/index.html
@@ -200,7 +200,31 @@
             </section>
 
         </section>
+        </section>
+        <section class="container extra-items">
+            <article class="extra-info">
+                <article class="extra-title">
+                    <h3 class="extra-heading">Follow Copa America<br> on OneFootball</h3>
+                    <button class="button">
+                        <a class="button-link" href="https://copaamerica.com/en/">
+                            <span class="button-link-span
+                        ">Click for Details</span> <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </button>
+                </article>
+                <article class="extra-img">
+                    <img src="images/copa-details.png" alt="">
+                </article>
+
+            </article>
+        </section>
+        <section>
+            <div class="logo-football">
+                <img src="images/Logo.png" alt="">
+            </div>
+        </section>
     </main>
+
 
 </body>
 
