--- a/index.html
+++ b/index.html
@@ -218,11 +218,62 @@
 
             </article>
         </section>
-        <section>
-            <div class="logo-football">
-                <img src="images/Logo.png" alt="">
-            </div>
+        <!-------extra part:02------->
+        <article class="news">
+            <h2 class="news-heading">“Best in the Field”</h2>
+            <article class="news-channels">
+                <div class="news-channel">
+                    <img class="img-channel goal-img" src="Goal.com.png" alt="">
+                    <button class="button button-extra">
+                        <a class="button-link"
+                            href="https://www.goal.com/en-in/news/argentina-vs-brazil-tv-channel-live-stream-team-news-copa/6m6abt6oqz5x1lggajiiqidaz"
+                            target="_blank">
+                            <span class="button-link-span
+                        ">GOOL Details</span> <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </button>
+                </div>
+                <div class="news-channel">
+                    <img class="img-channel espn-img" src="espn.png" alt="">
+                    <button class="button button-extra">
+                        <a class="button-link" href="https://www.espn.in/football/league/_/name/conmebol.america"
+                            target="_blank">
+                            <span class="button-link-span
+                        ">ESPN Details</span> <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </button>
+                </div>
+                <div class="news-channel">
+                    <img class="img-channel bbc-img" src="bbc-sport.png" alt="">
+                    <button class="button button-extra">
+                        <a class="button-link" href="https://www.bbc.com/sport/football/copa-america/scores-fixtures"
+                            target="_blank">
+                            <span class="button-link-span
+                        ">BBC Details</span> <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </button>
+                </div>
+            </article>
+        </article>
         </section>
+        <footer class="footer">
+            <div class="footer-img">
+                <img src="Logo.png" alt="">
+            </div>
+            <div class="footer-icons">
+                <div class="footer-icon">
+                    <a href="https://www.instagram.com/" class="footer-link" target="_blank"><i
+                            class="fab fa-instagram-square"></i></a>
+                    <a href="https://www.youtube.com/" class="footer-link" target="_blank"><i
+                            class="fab fa-youtube-square"></i></a>
+                    <a href="https://www.facebook.com/" class="footer-link" target="_blank"><i
+                            class="fab fa-facebook-square"></i></a>
+                    <a href="https://twitter.com/?lang=en" class="footer-link" target="_blank"><i
+                            class="fab fa-twitter-square"></i></a>
+                </div>
+                <p class="copyright">Copyright&copy; 2022 Football</p>
+            </div>
+        </footer>
     </main>
 
 
