--- a/index.html
+++ b/index.html
@@ -21,7 +21,26 @@
 <body>
     <!-- header part -->
     <header>
-
+        <div class="navs-header">
+            <div class="navs">
+                <nav class="nav">
+                    <a href="">Home</a>
+                </nav>
+                <nav class="nav"><a href="">Clubs</a></nav>
+                <nav class="nav"><a href="">Word Cup 2023</a></nav>
+                <nav class="nav"><a href="">Upcoming Matches</a></nav>
+                <nav class="nav"><a href="">Contact</a></nav>
+            </div>
+            <div class="login">
+                <nav class="log">
+                    <button class="butto button-nav">
+                        <a class="button-link" href="">
+                            <span class="">Login</span> <i class="fas fa-arrow-right"></i>
+                        </a>
+                    </button>
+                </nav>
+            </div>
+        </div>
     </header>
     <!-- main part -->
     <main>
